# ExamPrep

./: .gitignore
Backend/: .pre-commit-config.yaml  format.sh  main.py  pyproject.toml
Backend/app/: __init__.py  config.py  router.py
Backend/app/DBOperations/: user.py
Backend/app/DTO/: users.py
Backend/app/Schemas/: __init__.py  user.py
Backend/app/controller/User/: Auth_Controller.py
Backend/app/database/: __init__.py  core.py
Backend/app/services/: __init__.py
Backend/app/services/Users/: crud.py
Backend/app/services/Users/Auth/: Auth.py
Backend/app/utils/: __init__.py  logger.py  password_encryption_and_verification.py  tokens.py
Frontend/ExamPrep/: index.html  package-lock.json  package.json  vite.config.ts
Frontend/ExamPrep/src/: index.css  main.tsx
Frontend/ExamPrep/src/api/: auth.ts
Frontend/ExamPrep/src/components/: ErrorBoundary.tsx  GuestRoute.tsx  LoadingScreen.tsx  Navbar.test.tsx  Navbar.tsx  ProtectedRoute.tsx
Frontend/ExamPrep/src/components/ui/: badge.test.tsx  badge.tsx  button.test.tsx  button.tsx  card.test.tsx  card.tsx
Frontend/ExamPrep/src/context/: AuthContext.tsx
Frontend/ExamPrep/src/lib/: api.ts  preloader.ts  utils.test.ts
Frontend/ExamPrep/src/pages/: AuthPage.tsx  ChooseVibe.tsx  Dashboard.tsx  Home.test.tsx  Home.tsx  HowItWorks.tsx  Pricing.test.tsx  Pricing.tsx  Profile.tsx  UploadMaterial.tsx
Frontend/stitch_assets/: choose_your_vibe.html  upload_subject_material.html
