[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bandit>=1.9.4",
    "bcrypt>=5.0.0",
    "black>=26.3.1",
    "dotenv>=0.9.9",
    "fastapi>=0.135.2",
    "isort>=8.0.1",
    "loguru>=0.7.3",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "psycopg2-binary>=2.9.11",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.12.1",
    "python-jose>=3.5.0",
    "pytz>=2026.1.post1",
    "ruff>=0.15.7",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py312"
